<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center"
    android:padding="10dp"
    android:background="@color/background_primary"
    tools:context=".GeneratePhoneQRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="391dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_Result"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:id="@+id/qr_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="@color/button"
                android:text="@string/share"
                android:textColor="@color/textColorPrimary"
                app:cornerRadius="10dp"
                app:icon="@drawable/share"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="25dp"
                app:iconTint="@color/textColorPrimary" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/button"
                android:text="@string/save"
                android:textColor="@color/textColorPrimary"
                app:cornerRadius="10dp"
                app:icon="@drawable/download"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="25dp"
                app:iconTint="@color/textColorPrimary" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/edt_FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/edt_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_label" />

    <EditText
        android:id="@+id/edt_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/hint_phone_number"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organization" />

    <EditText
        android:id="@+id/edt_Org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/organization"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/edt_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website" />

    <EditText
        android:id="@+id/edt_Website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/website"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/home_scanner_item_bg"
        android:text="@string/generate"
        android:textColor="@color/black"
        app:cornerRadius="7dp" />

</LinearLayout>