<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center"
    android:padding="10dp"
    android:background="@color/background_primary"
    tools:context=".GenerateLinkQRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_Result"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:id="@+id/qr_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/share"
                android:backgroundTint="@color/button"
                android:textColor="@color/textColorPrimary"
                app:cornerRadius="10dp"
                app:icon="@drawable/share"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="25dp"
                app:iconTint="@color/textColorPrimary" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/button"
                android:text="@string/save"
                android:textColor="@color/textColorPrimary"
                app:cornerRadius="10dp"
                app:icon="@drawable/download"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="25dp"
                app:iconTint="@color/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url" />

    <EditText
        android:id="@+id/editText_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/input_your_url_here"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/home_scanner_item_bg"
        android:text="@string/generate"
        android:textColor="@color/black"
        app:cornerRadius="7dp" />

</LinearLayout>